--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
             <div class="logo">Khushi's Portfolio</div>
             <div>
                 <ul>
-                    <li><a class="link" href="BestPortfolioWebsite.html">home</a></li>
+                    <li><a class="link" href="index.html">home</a></li>
                     <li><a class="link" href="about.html">about</a></li>
-                    <li><a class="link" href="BestPortfolioWebsite.html">services</a></li>
+                    <li><a class="link" href="index.html">services</a></li>
                     <li><a class="link" href="project.html">projects</a></li>
                     <li><a class="link" href="contact.html">contact</a></li>
                 </ul>
