--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         I am a passionate </div>
                     <span id="element"></span>
                     <br>
-                    <button class="btn">Github</button>
-                    <button class="btn">Download Resume</button>
+                    <a href="https://github.com/AhadSaleem7"><button class="btn">Github</button></a>
+                    <a href="resume.html"><button class="btn">Download Resume</button></a>
 
 
                 </section>
@@ -68,7 +68,6 @@
     
         buttons.forEach((button) => {
             button.addEventListener("click", (e) => {
-                e.preventDefault();
                 button.classList.add("animate");
                 setTimeout(() => {
                     button.classList.remove("animate");
