--- a/project.html
+++ b/project.html
@@ -34,7 +34,7 @@
                     <div class="content">
                         <p>
                         <div style="color: gold;">1 : <a href="https://www.apunkagames.com/">Games Website 🎮</a></div>
-                        <div style="color: gold;">2 : <a href="https://amoviesverse.co/">Movies Website 🎥</a></div>
+                        <div style="color: gold;">2 : <a href="https://moviesverse.mx/">Movies Website 🎥</a></div>
                         <div style="color: gold;">3 : <a href="https://venettodesign.com/">Product Based Website 🛋️</a>
                         </div>
 
