--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a class="link" href="index.html">home</a></li>
                     <li><a class="link" href="about.html">about</a></li>
-                    <li><a class="link" href="index.html">services</a></li>
+                    <li><a class="link" href="services.html">services</a></li>
                     <li><a class="link" href="project.html">projects</a></li>
                     <li><a class="link" href="contact.html">contact</a></li>
                 </ul>
