--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,18 @@
           alt="image not found">
       </section>
   </main>
+   <script>
+        const buttons = document.querySelectorAll(".btn");
+    
+        buttons.forEach((button) => {
+            button.addEventListener("click", (e) => {
+                button.classList.add("animate");
+                setTimeout(() => {
+                    button.classList.remove("animate");
+                }, 600);
+            });
+        });
+    </script>
  
 </body>
 
